add footer and update README.md file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <td><button class="btn btn-sm saveBtn"></button></td>
             </tr>
             <tr id="9" class="timeSchedule">
-              <td>19 am</td>
+              <td>9 am</td>
               <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
               <td><button class="btn btn-sm saveBtn"></button></td>
             </tr>
@@ -85,6 +85,11 @@
         </table>
       </div>
     </div>
+  </div>
+
+  <div class="footer">
+    <p>Developed by</p>
+    <h5>Vimukthi Gunasekara</h5>
   </div>
 
 </body>
