--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="icon" type="image/png" href="./assets/images/title.png">
   <title>Work Day Scheduler</title>
@@ -24,66 +26,85 @@
     </div>
   </div>
 
-
   <div class="container">
-    <div class="row justify-content-center">
-
-      <div class="col-md col-xl-12">
-        <table class="table table-custom">
-          <tbody id="project-display">
-            <tr id="8" class="timeSchedule">
-              <td>8 am</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="9" class="timeSchedule">
-              <td>9 am</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="10" class="timeSchedule">
-              <td>10 am</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="11" class="timeSchedule">
-              <td>11 am</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="12" class="timeSchedule">
-              <td>12 am</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="13" class="timeSchedule">
-              <td>1 pm</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="14" class="timeSchedule">
-              <td>2 pm</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="15" class="timeSchedule">
-              <td>3 pm</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="16" class="timeSchedule">
-              <td>4 pm</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-            <tr id="17" class="timeSchedule">
-              <td>5 pm</td>
-              <td><textarea class="col-md-12 schedule" placeholder="Add schedule item here"></textarea></td>
-              <td><button class="btn btn-sm saveBtn"></button></td>
-            </tr>
-          </tbody>
-        </table>
+    <div id="time08" class="row timeSchedule">
+      <div class="col-2">
+        <p>08 am</p>
       </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time09" class="row timeSchedule">
+      <div class="col-2">
+        <p>09 am</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time10" class="row timeSchedule">
+      <div class="col-2">
+        <p>10 am</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time11" class="row timeSchedule">
+      <div class="col-2">
+        <p>11 am</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time12" class="row timeSchedule">
+      <div class="col-2">
+        <p>12 am</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time13" class="row timeSchedule">
+      <div class="col-2">
+        <p>01 pm</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time14" class="row timeSchedule">
+      <div class="col-2">
+        <p>02 pm</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time15" class="row timeSchedule">
+      <div class="col-2">
+        <p>03 pm</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time16" class="row timeSchedule">
+      <div class="col-2">
+        <p>04 pm</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
+    </div>
+
+    <div id="time17" class="row timeSchedule">
+      <div class="col-2">
+        <p>05 pm</p>
+      </div>
+      <textarea class="col-9 description" placeholder="Add schedule task ✔️"></textarea>
+      <button class="col-1 saveBtn"><i class="fa fa-save fa-2x"></i></button>
     </div>
   </div>
 
